@@ -1,39 +1,37 @@
 import org.apache.tools.ant.taskdefs.condition.Os
 
-buildscript {
-    dependencies {
-        classpath 'org.openjfx:javafx-plugin:0.0.13'
-    }
-}
 plugins {
     id 'java'
     id 'idea'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.jlink' version '2.26.0'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'org.beryx.jlink' version '3.0.0'
 }
 
 def versions = [
-        junit   : '5.10.0',
-        mockito : '5.4.0',
-        lombok  : '1.18.28',
-        jackson : '2.15.2',
-        slf4j   : '2.0.7',
-        wiremock: '3.0.0-beta-7'
+        junit   : '5.10.2',
+        mockito : '5.11.0',
+        lombok  : '1.18.32',
+        jackson : '2.17.0',
+        slf4j   : '2.0.12',
+        wiremock: '3.0.1'
 ]
 
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'org.openjfx.javafxplugin'
-
-sourceCompatibility = 17
-targetCompatibility = 17
-
 group 'ploiu'
-version '1.0'
+version '1.2'
 
 repositories {
     mavenCentral()
+}
+
+configurations.all {
+    exclude group: 'org.hamcrest', module: 'hamcrest-core'
+}
+
+java {
+    version = JavaLanguageVersion.of(21)
+    sourceCompatibility = JavaLanguageVersion.of(21)
+    targetCompatibility = JavaLanguageVersion.of(21)
 }
 
 dependencies {
@@ -55,7 +53,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
     // reactive stack
     implementation "io.reactivex.rxjava3:rxjava:3.1.8"
-    implementation "org.pdfsam.rxjava3:rxjavafx:3.0.2"
+    implementation "org.pdfsam.rxjava3:rxjavafx:3.0.3"
 
 
     compileOnly "org.projectlombok:lombok:$versions.lombok"
@@ -64,16 +62,31 @@ dependencies {
     testCompileOnly "org.projectlombok:lombok:$versions.lombok"
     testAnnotationProcessor "org.projectlombok:lombok:$versions.lombok"
 
+    testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation "org.junit.jupiter:junit-jupiter-api:$versions.junit"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$versions.junit"
     testImplementation "org.mockito:mockito-core:$versions.mockito"
     testImplementation "org.mockito:mockito-junit-jupiter:$versions.mockito"
     testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.11'
+    testImplementation 'org.testfx:testfx-junit5:4.0.18'
+    testImplementation 'org.assertj:assertj-core:3.25.3'
+    testImplementation 'org.testfx:openjfx-monocle:21.0.2'
 
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$versions.junit"
 }
 
 test {
+    jvmArgs = [
+            // exports
+            '--add-exports=javafx.graphics/com.sun.javafx.application=org.testfx',
+            '--add-exports=javafx.graphics/com.sun.glass.ui=org.testfx.monocle',
+            '--add-exports=javafx.graphics/com.sun.javafx.util=org.testfx.monocle',
+            '--add-exports=javafx.base/com.sun.javafx.logging=org.testfx.monocle',
+            '--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
+            // opens
+            '--add-opens=javafx.graphics/com.sun.glass.ui=org.testfx',
+            '--add-opens=javafx.graphics/com.sun.javafx.application=org.testfx'
+    ]
     useJUnitPlatform()
     testLogging {
         events "PASSED", "SKIPPED", "FAILED"
@@ -88,19 +101,19 @@ javafx {
 mainClassName = "ploiu.Main"
 
 jlink {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = ['--strip-debug', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'Ploiu File Server'
     }
     mergedModule {
         additive = true
-        requires 'org.slf4j'
         requires 'jdk.crypto.ec'
     }
 
     jpackage {
         imageName = 'ploiu-file-server'
         skipInstaller = false
+        appVersion = version
         if (Os.isFamily(Os.FAMILY_UNIX)) {
             installerType = 'deb'
             imageOptions = ['--icon', 'src/main/resources/assets/img/icon.png']
